# training

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
.cmake/api/v1/reply/: cache-v2-0dfc10b583a26dc932d5.json  cmakeFiles-v1-fd89ceb3894f3ff78b12.json  codemodel-v2-c0aa63e3d1cb07d0a15e.json  directory-daemon01-Debug-0097a596256de83da7dc.json  directory-fstream01-Debug-4a098b7ef77e17d382e1.json  directory-poco01-Debug-efec2133514ef9361ee3.json  directory-scratches-Debug-8176511983ca50e8cb6e.json  directory-server01-Debug-82fd61824c71f6ce6fc8.json  directory-socket_server01-Debug-36d27481fc45092fc8f9.json  directory-struct01-Debug-e9b276dde9dee57fe03f.json  directory-training-Debug-1aadb7d0e5c4b7ad8309.json  index-2023-10-29T07-34-22-0630.json  target-daemon01-Debug-82b10a5e52340704acb4.json  target-fstream01-Debug-578329f05934db004d3a.json  target-poco01-Debug-8e024ae8243174d12684.json  target-scratches-Debug-6e293bab46b4c3fbb4cc.json  target-server01-Debug-7ba45684dd81dafc5789.json  target-socket_server01-Debug-561200a4b2642b8a63e6.json  target-struct01-Debug-c6adf6d641ac01f27683.json  target-training-Debug-c096e0e237597153db6d.json
akira_task/: main.cpp  main.hh
backend01/: Makefile  backend01.c  backend01.cpp  backend01.h
c_pointers01/: CMakeLists.txt  c_pointers01.c  c_pointers01.h  tools.c  tools.h
compress01/: CMakeLists.txt  compress01  compress01.c  compress01.h
daemon01/: CMakeLists.txt  daemon01  daemon01.cpp
fcgi01/: CMakeLists.txt  fcgi01.cpp  fcgi01.hh
fstream01/: CMakeLists.txt  fstream01  fstream01.cpp  fstream01.h
poco01/: CMakeLists.txt  poco01  poco01.cpp  poco01.h  sample.db
poco01/.cmake/api/v1/reply/: cache-v2-09b7347d4cab82358e0d.json  cmakeFiles-v1-26624e7704bf9916e546.json  codemodel-v2-59d77f038ecb3e8619e8.json  index-2023-10-28T12-05-41-0555.json  target-poco01-Debug-44229c6163b4bfd8575d.json  toolchains-v1-563175f40f59f33a3b22.json
poco02/: CMakeLists.txt  poco02.cpp  poco02.h
random01/: CMakeLists.txt  random01  random01.c
scratches/: CMakeLists.txt  scratches.cpp  scratches.h
server01/: CMakeLists.txt  server01  server01.cpp  server01.h
server02/: CMakeLists.txt  server02.cpp  server02.h  server02cli.cpp  server02cli.h
server03/: CMakeLists.txt  server03  server03.c  server03.h  unp.h
socket_client01/: CMakeLists.txt
socket_server01/: CMakeLists.txt  socket_server01  socket_server01.cpp
struct01/: CMakeLists.txt  struct01  struct01.cpp  struct01.h
training/: CMakeLists.txt  training  training.cpp  training.h
